maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: not enough arguments for method casP: (x: Int, y: Int, k: Int)Unit.
Unspecified value parameter k.
    casP(x,y-1)
        ^JediEscaper:17: error: not enough arguments for method casP: (x: Int, y: Int, k: Int)Unit.
Unspecified value parameter k.
      casP(x-1,y)
          ^JediEscaper:23: error: not enough arguments for method casP: (x: Int, y: Int, k: Int)Unit.
Unspecified value parameter k.
      casP(x,y+1)
          ^JediEscaper:29: error: not enough arguments for method casP: (x: Int, y: Int, k: Int)Unit.
Unspecified value parameter k.
      casP(x+1,y)
          ^